# chira

./: Cargo.toml  LICENSE  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  archive.rs  cli.rs  config.rs  external.rs  i18n.rs  main.rs  scratch.rs  ui.rs
