[package]
name = "chira"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
description = "chirashi no ura for your terminal — a TUI for disposable, scribble-anything working directories"
license = "MIT"
repository = "https://github.com/silenvx/chira"
keywords = ["tui", "scratch", "cli", "ratatui", "scratchpad"]
categories = ["command-line-utilities"]

[[bin]]
name = "chira"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.2"
chrono = "0.4.45"
shell-words = "1.1.1"
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
toml_edit = "0.25.12"

[profile.release]
opt-level = "z"
lto = true
strip = true
